feat: 添加仪表板相关功能和DTO，更新AI助手功能